# plan42-be

./: .gitignore  README.md  agent.py  cached_attractions.json  cached_directions.json  cached_distances.json  main.py  pyproject.toml  tools.py
tests/: test_charge_planner.py  test_charging_stations.py  test_plan_route_endpoint.py
utils/: charge_planner.py  charging_station.py  directions.py  local_directions_cache.py  location.py  precedence.py  stop_planner.py
utils/data_collection/: ch_charging_stations.py  museums.py  myswitzerland_attractions.py  supabase_load_attractions.py  supabase_load_charging_stations.py
